# datagen

./: analyze_by_source.py  analyze_format_errors.py  check_code_wr.py  check_format.py  check_identical_failures.py  check_python_format.py  check_row_10.py  check_similarity.py  compare_gpt.py  compare_gpt_new.py  compare_llm.py  compare_llm_auto.py  eval_datasets.py  export_all_same.py  export_code_comparisons.py  export_david.py  export_instruct.py  export_reasoning.py  export_wildchat.py  filter_loops.py  gemma2_think.jinja  gemma_think.jinja  generate.py  generate_pair.py  generate_rejected.py  generate_responses.py  green.jinja  inspect_dataset.py  instruct.md  leaderboard.py  pyproject.toml  run_gpt_eval.py  show_diffs.py  show_wildchat_example.py  upload_to_hub.py
