[project]
name = "datagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.2",
    "openai>=2.14.0",
    "tqdm>=4.67.1",
    "trio>=0.32.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "datatrove[inference]",
    "jinja2>=3.1.6",
    "transformers>=4.57.3",
]

[tool.uv.sources]
datatrove = { path = "../datatrove", editable = true }
